# ROS_FrenchCupRobotic2019

./: .gitmodules  PourRaph.ino  README.md  arduino setup ros
Arduino/codeur_arduino_1.0/: codeur_arduino_1.0.ino
ArduinoROS- Node/: Document sans nom 1
ArduinoROS- Node/cdr_encoder_left_controller/: cdr_encoder_left_controller.ino
ArduinoROS- Node/cdr_encoder_right_controller/: cdr_encoder_right_controller.ino
ArduinoROS- Node/cdr_motor_controller/: cdr_motor_controller.ino
ArduinoROS- Node/libraries/ros_lib/create_node/: TurtlebotSensorState.h
ArduinoROS- Node/libraries/ros_lib/kobuki_msgs/: ControllerInfo.h  ScanAngle.h  VersionInfo.h
ArduinoROS- Node/libraries/ros_lib/realsense_camera/: IMUInfo.h
ArduinoROS- Node/libraries/ros_lib/turtlebot3_applications_msgs/: PanoramaImg.h
ArduinoROS- Node/libraries/ros_lib/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionFeedback.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Feedback.h  Turtlebot3Goal.h  Turtlebot3Result.h
ArduinoROS- Node/libraries/ros_lib/turtlebot_actions/: FindFiducialAction.h  FindFiducialActionFeedback.h  FindFiducialActionGoal.h  FindFiducialActionResult.h  FindFiducialGoal.h  FindFiducialResult.h  TurtlebotMoveAction.h  TurtlebotMoveActionFeedback.h  TurtlebotMoveActionGoal.h  TurtlebotMoveActionResult.h  TurtlebotMoveFeedback.h  TurtlebotMoveGoal.h  TurtlebotMoveResult.h
ArduinoROS- Node/libraries/ros_lib/turtlebot_calibration/: ScanAngle.h
ArduinoROS- Node/libraries/ros_lib/turtlebot_msgs/: PanoramaImg.h
ArduinoROS- Node/servo_node/: servo_node.ino
ArduinoROS- Node/test_going_straight/: test_going_straight.ino
ArduinoROS- Node/ultrasonic_sensor_node/: ultrasonic_sensor_node.ino
Catkin_ws_test/devel/: .catkin  .rosinstall  setup.sh
Catkin_ws_test/devel/lib/correction/: correction  correction2
Catkin_ws_test/devel/lib/pkgconfig/: correction.pc
Catkin_ws_test/src/correction/: CMakeLists.txt
Catkin_ws_test/src/correction/src/: .t.swp  pid.py  test.cpp  test2.cpp  test_correction.cpp
Firmware/PID_WheelLeft/src/: pidLeft.cpp  testEncoder.cpp
Firmware/PID_WheelLeft/test/: test.cpp
Firmware/PID_WheelRight/src/: PID_Right.cpp  main.cpp
IHM/: ProjetInter.ui
IHM/bash_file/: action_go_goldenium.sh  action_show_state_left.sh  action_show_state_right.sh  action_wheel_encoder_left.sh  action_wheel_encoder_right.sh  create_master.sh  forward.sh  reset_wheel_encoder_right.sh  stopRight.sh
Project Interface/: MainWindow.py  gui.py  resources.qrc  resources_rc.py
Project Interface/bash_file/: Controll_effort_left.sh  Controll_effort_right.sh  action_bras.sh  action_kill_master.sh  action_show_topic.sh  reset_wheel_encoder_left.sh  stopLeft.sh
Raph.ino/: Raph.ino.ino
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/beginner_tutorials/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/location_monitor/: .catkin  (+3 more)
catkin_ws/logs/location_monitor/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.003.log.stderr  build.check.006.log.stderr  build.cmake.000.log.stderr
catkin_ws/src/dvb_hardware/: CMakeLists.txt  package.xml
catkin_ws/src/dvb_hardware/include/dvb_hardware/: encoder.h  hardware.h  motor.h  ultrasonic_sensor.h
catkin_ws/src/dvb_hardware/src/: encoder.cpp  hardware.cpp  motor.cpp  ultrasonic_sensor.cpp
catkin_ws/src/encoder_controller/: CMakeLists.txt  package.xml
catkin_ws/src/location_monitor/: CMakeLists.txt
catkin_ws/src/location_monitor/msg/: LandMarkDistance.msg
catkin_ws/src/location_monitor/src/: location.cpp
catkin_ws/src/wheel_encoder/: CMakeLists.txt  package.xml
catkin_ws/src/wheel_encoder/src/: Left_encoder.cpp  talker.cpp
cdr_robot_ws/: README.md
cdr_robot_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
cdr_robot_ws/src/ROS_Libraries/: README.md
cdr_robot_ws/src/ROS_Libraries/dvb_control/: CMakeLists.txt
cdr_robot_ws/src/ROS_Libraries/dvb_control/include/dvb_control/: pid.h
cdr_robot_ws/src/ROS_Libraries/dvb_control/src/: move_base.cpp  pid.cpp
cdr_robot_ws/src/ROS_Libraries/dvb_hardware/: CMakeLists.txt  package.xml
cdr_robot_ws/src/ROS_Libraries/dvb_hardware/include/dvb_hardware/: hardware.h  ultrasonic_sensor.h
cdr_robot_ws/src/ROS_Libraries/dvb_hardware/src/: hardware.cpp  ultrasonic_sensor.cpp
cdr_robot_ws/src/ROS_Libraries/dvb_map/: CMakeLists.txt
cdr_robot_ws/src/ROS_Libraries/dvb_map/include/dvb_map/: map.h  table.h
cdr_robot_ws/src/ROS_Libraries/dvb_map/src/: map.cpp  table.cpp
cdr_robot_ws/src/ROS_Libraries/dvb_robot/: CMakeLists.txt  package.xml
cdr_robot_ws/src/ROS_Libraries/dvb_robot/include/dvb_robot/: robot.h  robot_cdr.h
cdr_robot_ws/src/ROS_Libraries/dvb_robot/src/: inmoov.cpp  robot.cpp
cdr_robot_ws/src/deplacement/: CMakeLists.txt  package.xml
cdr_robot_ws/src/deplacement/launch/: base.launch
cdr_robot_ws/src/deplacement/src/: deplacement.cpp  test.py
cdr_robot_ws/src/encoder_controller/: CMakeLists.txt
cdr_robot_ws/src/encoder_controller/src/: encoder_controller.cpp
cdr_robot_ws/src/motor_controller/: CMakeLists.txt
cdr_robot_ws/src/motor_controller/launch/: encoder.launch  motor_controller.launch  motor_controller.launch.save
cdr_robot_ws/src/motor_controller/src/: motor_controller.cpp
cdr_robot_ws/src/param_controller/: CMakeLists.txt
cdr_robot_ws/src/robot_move_controller/: CMakeLists.txt  package.xml
cdr_robot_ws/src/robot_path_planning/: CMakeLists.txt  package.xml
cdr_robot_ws/src/robot_path_planning/include/robot_path_planning/: a_star.h
cdr_robot_ws/src/robot_path_planning/src/: a_star.cpp
cdr_robot_ws/src/sonar_controller/: CMakeLists.txt  package.xml
cdr_robot_ws/src/sonar_controller/src/: sonar_controller.cpp
cdr_robot_ws_1/devel/: setup.sh
cdr_simulation_ws/devel/: .catkin  .rosinstall  setup.sh
cdr_simulation_ws/src/robot_cdr_description/: CMakeLists.txt
cdr_simulation_ws/src/table_cdr_gazebo/: CMakeLists.txt  package.xml
(+205 files in other folders)
